--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ body{
 }
 .navbar{
     background-color: #f4df20;
+    position: fixed;
     width: 100%;
     /* height: 40%; */
     height: 50px;
@@ -37,12 +38,19 @@ body{
 
 /* sidebar */
 .sideBar{
-    top: 0;
-    bottom: 0;
-    width: 100%;
     position: absolute;
+    top: 50px;
+    bottom: 0;
+    /* left:-100%; */
+    width: 100%;
     color: #ffffff;
     background-color: #000000;
+    z-index: 1;
+    /* animation: showSideBar 0.3s; */
+}
+@keyframes slideSideBar{
+    from{left: -100%}
+	to{left: 0}
 }
 ul{
   list-style-type: none;
@@ -55,7 +63,7 @@ li{
     font-weight: bold;
 }
 .list{
-    margin: 20% 0 0 0;
+    margin: 17.5% 0 0 0;
 }
 /* border of li */
 .sideBar .list ul div{
@@ -68,4 +76,44 @@ li{
 }
 .faq ul li{
     margin: 0 0 3.5% 0;
+}
+
+/* searchBar */
+.searchBar{
+    position: fixed;
+    top: 50px;
+    width: 100%;
+    height: 50px;
+    z-index: 2;
+}
+input{
+    border: none;
+    width: 100%;
+    height: 100%;
+    font-size: 22px;
+    padding: 3.5% 0 3.5% 3.5%;
+}
+.triangle{
+    width: 5px; 
+    height: 5px; 
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid #000000;
+    position: fixed;
+    right: 18.5%;
+    top: 5%;
+    z-index: 4;
+}
+
+/* class hidden */
+.hidden{
+    display: none;
+}
+/* class not hidden */
+.show{
+    display: block;
+}
+
+.showMoving{
+    animation: showSideBar 0.3s;
 }
