--- a/css/header.css
+++ b/css/header.css
@@ -1,17 +1,18 @@
-body{
+body,p{
     margin: 0;
     padding: 0;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .navbar{
     background-color: #f4df20;
-    position: fixed;
+    position: sticky;
+    top: 0;
     width: 100%;
-    /* height: 40%; */
-    height: 50px;
+    height: 7.5%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding: 0 0 2% 0;
 }
 .burgerItem{
     order: 1;
@@ -38,19 +39,32 @@ body{
 
 /* sidebar */
 .sideBar{
-    position: absolute;
-    top: 50px;
+    position: fixed;
+    top: 7.5%;
     bottom: 0;
-    /* left:-100%; */
     width: 100%;
     color: #ffffff;
     background-color: #000000;
     z-index: 1;
-    /* animation: showSideBar 0.3s; */
 }
-@keyframes slideSideBar{
+.sideBar.closed{
+    left:-100%;
+}
+.sideBar.closing{
+    animation-name: sideBar-closing;
+    animation-duration: 0.3s;
+}
+.sideBar.opening{
+    animation-name: sideBar-opening;
+    animation-duration: 0.3s;
+}
+@keyframes sideBar-opening{
     from{left: -100%}
 	to{left: 0}
+}
+@keyframes sideBar-closing{
+    from{left: 0}
+	to{left: -100%}
 }
 ul{
   list-style-type: none;
@@ -81,9 +95,9 @@ li{
 /* searchBar */
 .searchBar{
     position: fixed;
-    top: 50px;
+    top: 7.5%;
     width: 100%;
-    height: 50px;
+    height: 7.5%;
     z-index: 2;
 }
 input{
@@ -104,6 +118,20 @@ input{
     top: 5%;
     z-index: 4;
 }
+.searchBar.open{
+    animation: searchBar-show 0.3s;
+}
+.searchBar.close{
+    animation: searchBar-hidden 1.3s;
+}
+@keyframes searchBar-show{
+    from{opacity: 0;}
+    to{opacity: 1;}
+}
+@keyframes searchBar-hidden{
+    from{opacity: 1;}
+    to{opacity: 0;}
+}
 
 /* class hidden */
 .hidden{
@@ -114,6 +142,16 @@ input{
     display: block;
 }
 
-.showMoving{
-    animation: showSideBar 0.3s;
+/* content */
+.container{
+    /* margin: 2% 3.5% 2% 3.5%; */
+    /* position: fixed; */
+    width: 100%;
+    background-color: aqua;
+    /* overflow: scroll;     */
+}
+.texto{
+    margin: 0 3.5% 2% 3.5%;
+    padding: 1% 0 0 0;
+    background-color: red;
 }
