--- a/css/cart.css
+++ b/css/cart.css
@@ -1,11 +1,15 @@
 .imgItemCart{
     width: 40%;
-    height: 150px;
-    /* border: 1px black solid; */
+    height: 100px;
 }
 .imgItemCart img{
     width: 100%;
     height: 100%;
+    overflow: hidden;
+}
+.contentItemCart{
+    width: 100%;
+    height: 100px;
 }
 .flexCol{
     display: flex;
@@ -25,4 +29,18 @@
 }
 .quantityBoxSmall{
     width: 40%;
+}
+
+.cartItem{
+    display: inline-flex;
+}
+
+.subItemCart{
+    width: 100%;
+}
+
+.inputCart{
+    width: 12.5%;
+    font-size: 16px;
+    padding: 0 0 0 2%;
 }
