--- a/css/header.css
+++ b/css/header.css
@@ -118,17 +118,7 @@ input{
     font-size: 22px;
     padding: 3.5% 0 3.5% 3.5%;
 }
-.triangle{
-    width: 5px; 
-    height: 5px; 
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-    border-bottom: 10px solid #000000;
-    position: fixed;
-    right: 18.5%;
-    top: 5%;
-    z-index: 4;
-}
+
 .searchBar.open{
     animation: searchBar-show 0.3s;
 }
@@ -157,7 +147,6 @@ input{
 .container{
     width: 100%;
     background-color: aqua;
-    padding: 0 0 2% 0;
 }
 .texto{
     margin: 0 3.5% 2% 3.5%;
@@ -165,10 +154,10 @@ input{
     background-color: red;
 }
 .mgLeft{
-    margin-left: 10.5%;
+    margin-left: 2%;
 }
 .mgRight{
-    margin-right: 10.5%;
+    margin-right: 2%;
 }
 .pdLeft{
     padding-left: 3.5%;
@@ -214,7 +203,7 @@ input{
     bottom: 0;
     width: 100%;
     background-color: #ffffff;
-    z-index: 1;
+    z-index: 3;
 }
 .cart.closed{
     right: -100%;
@@ -245,6 +234,9 @@ input{
 
 .bgPink{
     background-color: pink;
+}
+.bgBlue{
+    background-color: lightblue;
 }
 .bgOrange{
     background-color: orangered;
