--- a/css/header.css
+++ b/css/header.css
@@ -8,6 +8,7 @@ nav div{
 }
 a{
     cursor: pointer;
+    color: inherit;
 }
 .topBar{
     top: 0;
@@ -18,10 +19,10 @@ a{
     background-color: #f4df20;
 }
 .navbar{
-    background-color: #f4df20;
     position: sticky;
     padding: 0 0 2.5% 0;
     z-index: 3;
+    box-shadow: 0 0 1px rgba(0,0,0,0.2);
 }
 .burgerItem{
     order: 1;
@@ -29,7 +30,7 @@ a{
 }
 .titleItem{
     order: 2;
-    margin: 3.5% 0 0 7.5%;
+    margin: 3.5% 0 0 0%;
 }
 .searchItem{
     order: 3;
@@ -87,7 +88,7 @@ li{
     font-weight: bold;
 }
 .list{
-    margin: 17.5% 0 0 0;
+    margin: 10% 0 0 0;
 }
 /* border of li */
 .sideBar .list ul div{
@@ -104,20 +105,21 @@ li{
 
 /* searchBar */
 .searchBar{
-    position: fixed;
-    top: 7.5%;
+    top: 0;
     width: 100%;
     height: 7.5%;
+    position: fixed;
     z-index: 3;
+    box-shadow: 0 0 1px rgba(0,0,0,0.2);
 }
 input{
     border: none;
 }
 .searchInput{
-    width: 100%;
+    width: 90%;
     height: 100%;
     font-size: 22px;
-    padding: 3.5% 0 3.5% 3.5%;
+    padding: 0 0 0 5%;
 }
 
 .searchBar.open{
@@ -148,7 +150,6 @@ input{
 .container{
     width: 100%;
     /* background-color: aqua; */
-    padding-top: 2%;
 }
 .mgLeft{
     margin-left: 2%;
@@ -169,10 +170,19 @@ input{
 .bold{
     font-weight: bold;
 }
-.grayLine{
+.greyLine{
     width: 100%;
     height: 1px;
     background: #C4C4C4;
+}
+.shadow{
+    width: 100%;
+    height: 1px;
+    /* background: rgba(0,0,0,0.1); */
+    background: #f9f9f9;
+}
+.greyShadow{
+    box-shadow: 0 0 1px 0 rgba(0,0,0,0.2);
 }
 .spcbtw{
     justify-content: space-between;
@@ -244,4 +254,22 @@ input{
 
 .border{
     border: 1px black solid;
+}
+
+.btnInput{
+    background: none;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    border: 1px solid #f2f2f2;
+    height: 100%;
+    display: inline-block;
+    padding: 1% 3% 1% 3%;
+}
+.bgBlack{
+    background: #353737;
+}
+.colorWhite{
+    color: #ffffff;
 }
