--- a/css/product.css
+++ b/css/product.css
@@ -34,36 +34,40 @@
 }
 .productImage{
     width: 100%;
-    height: 300px;
+    height: 400px;
 }
 .productInfo{
     font-size: 24px;
     font-weight: bold;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background: #ffffff;
+    letter-spacing: 1px;
 }
 .productColor{
     font-size: 20px;
     background: #ffffff;
 }
-.colors div{
+.color{
     height: 40px;
     width: 40px;
     border-radius: 50%;
-    border: 1px #000000 solid;
+    border: 2px #c4c4c4 solid;
     margin: 2% 2% 2% 0;
     cursor: pointer;
 }
-.sizes div{
+.color.active{
+    border: 2px #000000 solid;
+}
+.size{
     min-width: 50px;
-    border: 1px #000000 solid;
-    background: #C4C4C4;
+    border: 1px #c4c4c4 solid;
+    /* background: #C4C4C4; */
     margin: 2% 4.5% 2% 0;
     text-align: center;
     padding: 2.5% 0 2.5% 0;
     cursor: pointer;
+}
+.size.active{
+    border: 1px #000000 solid;
+    background: #C4C4C4;
 }
 .sizes{
     flex-wrap: wrap;
@@ -97,13 +101,17 @@
     padding-bottom: 3%;
 }
 .quantity{
+    height: 100%;
     justify-content: end;
 }
 .quanInput{
-    width: 10%;
     height: 100%;
-    font-size: 22px;
-    padding-left: 2%;
+    font-size: 16px;
+    text-align: center;
+    width: 15%;
+    border: 1px solid #f2f2f2;
+    display: inline-block;
+    padding: 1% 1% 1% 0;
 }
 /* Firefox */
 input[type=number] {
@@ -123,4 +131,8 @@ input[type=number] {
 }
 div.rounded:hover{
     border: 1px #000000 solid;
+}
+
+.letterSpace{
+    letter-spacing: 1px;
 }
